--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#800080"
     android:fitsSystemWindows="true"
     tools:context=".ParkingDetailActivity"
     tools:ignore="MergeRootFrame">
@@ -62,6 +63,7 @@
             android:id="@+id/add_course_prereqs_yes"
             android:layout_width="207dp"
             android:layout_height="wrap_content"
+            android:background="#FFFFFF"
             android:text="Yes" />
 
         <Button
@@ -69,6 +71,7 @@
             android:layout_width="201dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:background="#FFFFFF"
             android:text="No" />
 
     </TableRow>
@@ -77,6 +80,8 @@
         android:id="@+id/textViewEmptyParking"
         android:layout_width="match_parent"
         android:layout_height="65dp"
+        android:gravity="center"
+        android:textColor="#E8D3A2"
         android:text="Does the parking area have ANY empty parking spaces?"
         app:layout_anchor="@+id/tableRow"
         app:layout_anchorGravity="top|center" />
@@ -87,6 +92,8 @@
         android:id="@+id/textViewHandicap"
         android:layout_width="wrap_content"
         android:layout_height="79dp"
+        android:gravity="center"
+        android:textColor="#E8D3A2"
         android:text="Does the parking area have ANY empty handicap parking spaces?"
         app:layout_anchor="@+id/tableRow"
         app:layout_anchorGravity="bottom|center" />
@@ -97,6 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:text="No"
+        android:background="#FFFFFF"
         app:layout_anchor="@+id/tableRow"
         app:layout_anchorGravity="bottom|center" />
 
@@ -105,6 +113,7 @@
         android:layout_width="206dp"
         android:layout_height="wrap_content"
         android:text="Yes"
+        android:background="#FFFFFF"
         app:layout_anchor="@+id/tableRow"
         app:layout_anchorGravity="bottom|left" />
 
