--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,37 +4,64 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#800080"
     tools:context=".ParkingAddFragment">
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:fontFamily="casual"
+        android:lineSpacingExtra="8sp"
+        android:text="UPark"
+        android:textColor="#E8D3A2"
+        android:textSize="36dp"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:typeface="serif" />
+
     <EditText
         android:id="@+id/add_first_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="#FFFFFF"
         android:hint="First Name" />
     <EditText
         android:id="@+id/add_last_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="#FFFFFF"
         android:hint="Last Name" />
     <EditText
         android:id="@+id/add_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="#FFFFFF"
         android:hint="Username" />
     <EditText
         android:id="@+id/add_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="#FFFFFF"
         android:hint="Email" />
     <EditText
         android:id="@+id/add_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="#FFFFFF"
         android:hint="Password" />
     <Button
         android:id="@+id/btn_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:background="#E8D3A2"
         android:text="Register" />
 
 </LinearLayout>
