--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,17 +8,28 @@
     android:background="#800080"
     tools:context=".LoginFragment">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="false"
+        android:baselineAlignBottom="false"
+        android:src="@mipmap/u_park_logo"
+        android:translationX="110dp"
+        android:translationY="118dp" />
+
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="160dp"
         android:layout_marginTop="70dp"
         android:fontFamily="casual"
+        android:gravity="center"
         android:lineSpacingExtra="8sp"
         android:text="UPark"
         android:textColor="#E8D3A2"
         android:textSize="36dp"
-        android:gravity="center"
         android:textStyle="bold"
         android:typeface="serif" />
 
@@ -25,7 +37,7 @@
         android:id="@+id/email_address_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="25dp"
         android:background="#FFFFFF"
@@ -36,10 +48,10 @@
         android:id="@+id/password_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_your_password_hint"
+        android:layout_marginLeft="0dp"
+        android:layout_marginBottom="15dp"
         android:background="#FFFFFF"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="25dp"
+        android:hint="@string/enter_your_password_hint"
         android:inputType="textPassword" />
 
     <Button
@@ -47,16 +59,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:background="#E8D3A2"
         android:layout_marginBottom="15dp"
+        android:background="#E8D3A2"
         android:text="@string/btn_sign_in" />
 
     <Button
         android:id="@+id/btn_create_acc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#E8D3A2"
         android:layout_marginBottom="15dp"
+        android:background="#E8D3A2"
         android:text="@string/btn_create_acc" />
 
 
