--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,28 +20,28 @@
         android:textStyle="bold"
         android:typeface="serif" />
 
-    <EditText
-        android:id="@+id/add_first_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="#FFFFFF"
-        android:hint="First Name" />
-    <EditText
-        android:id="@+id/add_last_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="#FFFFFF"
-        android:hint="Last Name" />
-    <EditText
-        android:id="@+id/add_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="#FFFFFF"
-        android:hint="Username" />
+<!--    <EditText-->
+<!--        android:id="@+id/add_first_name"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:background="#FFFFFF"-->
+<!--        android:hint="First Name" />-->
+<!--    <EditText-->
+<!--        android:id="@+id/add_last_name"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:background="#FFFFFF"-->
+<!--        android:hint="Last Name" />-->
+<!--    <EditText-->
+<!--        android:id="@+id/add_username"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:background="#FFFFFF"-->
+<!--        android:hint="Username" />-->
     <EditText
         android:id="@+id/add_email"
         android:layout_width="match_parent"
