--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,12 @@
         android:orderInCategory="100"
         android:title="@string/action_logout"
         app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/share"
+        android:title="Share"
+        android:icon="@drawable/ic_share_black_24dp"
+        app:showAsAction="always"
+        />
+
 </menu>
