--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:layout_marginBottom="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ParkingListActivity"
     tools:listitem="@layout/item_list_content" />
