--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -39,7 +39,8 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/item_detail_container"
         android:layout_width="match_parent"
-        android:layout_height="278dp"
+        android:layout_height="441dp"
+        android:layout_marginTop="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -52,6 +53,8 @@
         app:layout_anchorGravity="top|end"
         app:srcCompat="@drawable/ic_share_black_24dp"
         tools:ignore="VectorDrawableCompat" />
+
+
 
     <TableRow
         android:id="@+id/tableRow"
