--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -1,37 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ParkingDetailFragment">
+
     <TextView
         android:id="@+id/item_detail_id"
-        style="?android:attr/textAppearanceLarge"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:gravity="center"
         android:padding="16dp"
-        android:textIsSelectable="true" />
-    <TextView
-        android:id="@+id/item_detail_short_desc"
-        style="?android:attr/textAppearanceLarge"
+        android:textAllCaps="true"
+        android:textSize="36sp"
+        android:textStyle="bold" />
+
+    <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textIsSelectable="true" />
+        android:layout_height="1dp"
+        android:layout_marginLeft="32dp"
+
+        android:layout_marginRight="32dp"
+
+        android:background="?android:attr/listDivider"
+        android:requiresFadingEdge="horizontal" />
+
     <TextView
         android:id="@+id/item_detail_long_desc"
-        style="?android:attr/textAppearanceLarge"
+        style="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textIsSelectable="true" />
-    <TextView
-        android:id="@+id/item_detail_prereqs"
-        style="?android:attr/textAppearanceLarge"
+        android:gravity="center"
+
+        android:padding="16dp" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textIsSelectable="true" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+
+        <ImageView
+            android:id="@+id/accessible_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:gravity="center"
+            android:padding="4dp"
+            android:scaleType="center"
+            android:src="@drawable/ic_baseline_accessible_forward_24" />
+
+        <TextView
+            android:id="@+id/item_detail_short_desc"
+            style="?android:attr/textAppearanceLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|left"
+            android:padding="16dp"
+            android:textIsSelectable="true" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+
+        <ImageView
+            android:id="@+id/parking_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:gravity="center"
+            android:padding="4dp"
+            android:scaleType="center"
+            android:src="@drawable/ic_baseline_local_parking_24" />
+
+        <TextView
+            android:id="@+id/item_detail_prereqs"
+            style="?android:attr/textAppearanceLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+
+            android:textIsSelectable="true" />
+
+    </LinearLayout>
 
 </LinearLayout>
