--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -37,65 +37,107 @@
         android:layout_height="wrap_content"
         android:gravity="center"
 
-        android:padding="16dp" />
+        android:padding="16dp"
+        app:autoSizeTextType="uniform" />
 
-    <LinearLayout
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_margin="8dp"
+        app:cardCornerRadius="4dp"
+        app:contentPadding="8dp">
 
-
-        <ImageView
-            android:id="@+id/accessible_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:gravity="center"
-            android:padding="4dp"
-            android:scaleType="center"
-            android:src="@drawable/ic_baseline_accessible_forward_24" />
-
-        <TextView
-            android:id="@+id/item_detail_short_desc"
-            style="?android:attr/textAppearanceLarge"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical|left"
-            android:padding="16dp"
-            android:textIsSelectable="true" />
-
-    </LinearLayout>
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
 
 
-    <LinearLayout
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginLeft="16dp"
+                app:cardBackgroundColor="#BF000000">
+
+                <ImageView
+                    android:id="@+id/accessible_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_baseline_accessible_forward_24" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/item_detail_short_desc"
+                style="?android:attr/textAppearanceLarge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:maxLines="1"
+                android:padding="16dp"
+
+                app:autoSizeTextType="uniform" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_margin="8dp"
+        app:cardCornerRadius="4dp"
+        app:contentPadding="8dp">
 
-
-        <ImageView
-            android:id="@+id/parking_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:gravity="center"
-            android:padding="4dp"
-            android:scaleType="center"
-            android:src="@drawable/ic_baseline_local_parking_24" />
-
-        <TextView
-            android:id="@+id/item_detail_prereqs"
-            style="?android:attr/textAppearanceLarge"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-            android:textIsSelectable="true" />
 
-    </LinearLayout>
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_gravity="center"
+                app:cardBackgroundColor="#BF000000">
+
+                <ImageView
+                    android:id="@+id/parking_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_baseline_local_parking_24" />
+            </androidx.cardview.widget.CardView>
+
+   
+
+            <TextView
+                android:id="@+id/item_detail_prereqs"
+                style="?android:attr/textAppearanceLarge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:maxLines="1"
+
+                android:padding="16dp"
+                app:autoSizeTextType="uniform" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
