--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -12,14 +12,14 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
@@ -36,93 +36,180 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/item_detail_container"
-        android:layout_width="match_parent"
-        android:layout_height="441dp"
-        android:layout_marginTop="16dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
+        android:layout_gravity="end"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@+id/item_detail_container"
-        app:layout_anchorGravity="top|end"
+
         app:srcCompat="@drawable/ic_share_black_24dp"
         tools:ignore="VectorDrawableCompat" />
 
-
-
-    <TableRow
-        android:id="@+id/tableRow"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="165dp"
-        android:layout_gravity="bottom">
+        android:layout_height="match_parent">
 
-
-        <Button
-            android:id="@+id/add_course_prereqs_yes"
-            android:layout_width="207dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#800080"
-            android:textColor="#E8D3A2"
-            android:text="Yes" />
+            android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/add_course_prereqs_no"
-            android:layout_width="201dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:textColor="#E8D3A2"
-            android:background="#800080"
-            android:text="No" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-    </TableRow>
+                <androidx.core.widget.NestedScrollView
+                    android:id="@+id/item_detail_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="441dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                </androidx.core.widget.NestedScrollView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewEmptyParking"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        android:gravity="center"
+                        android:text="Are there any parking spots available at this lot?"
+                        android:textColor="#E8D3A2"
+                        android:textSize="18sp"
+                        android:textStyle="italic" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:padding="8dp">
+
+                        <Space
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
 
 
-    <TextView
-        android:id="@+id/textViewEmptyParking"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_marginBottom="9dp"
-        android:gravity="center"
-        android:text="Does the parking area have ANY empty parking spaces?"
-        android:textColor="#E8D3A2"
-        app:layout_anchor="@+id/tableRow" />
+                        <Button
+                            android:id="@+id/add_course_prereqs_yes"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="#4CAF50"
+                            android:text="Yes"
+                            android:textColor="#FFFFFF"
+                            android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textViewHandicap"
-        android:layout_width="wrap_content"
-        android:layout_height="79dp"
-        android:gravity="center"
-        android:text="Does the parking area have ANY empty handicap parking spaces?"
-        android:textColor="#E8D3A2"
-        app:layout_anchor="@+id/tableRow"
-        app:layout_anchorGravity="center" />
+                        <Space
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
 
-    <Button
-        android:id="@+id/add_course_shortdesc_no"
-        android:layout_width="203dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="No"
-        android:textColor="#E8D3A2"
-        app:layout_anchor="@+id/tableRow"
-        android:background="#800080"
-        app:layout_anchorGravity="bottom|center" />
+                        <Button
+                            android:id="@+id/add_course_prereqs_no"
 
-    <Button
-        android:id="@+id/add_course_shortdesc_yes"
-        android:layout_width="206dp"
-        android:layout_height="wrap_content"
-        android:text="Yes"
-        android:background="#800080"
-        android:textColor="#E8D3A2"
-        app:layout_anchor="@+id/tableRow"
-        app:layout_anchorGravity="bottom|left" />
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="#FFE91E63"
+                            android:text="No"
+                            android:textColor="#FFFFFF"
+                            android:textSize="18sp" />
+
+                        <Space
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                    </LinearLayout>
+                    <View
+                        android:id="@+id/divider"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="32dp"
+
+                        android:layout_marginRight="32dp"
+
+                        android:background="?android:attr/listDivider"
+                        android:requiresFadingEdge="horizontal" />
+
+                    <TextView
+                        android:id="@+id/textViewHandicap"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Are there any accessible parking spots available at this lot?"
+                        android:textColor="#E8D3A2"
+                        android:textSize="18sp"
+                        android:textStyle="italic" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:padding="8dp">
+
+                        <Space
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <Button
+                            android:id="@+id/add_course_shortdesc_yes"
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="#4CAF50"
+
+                            android:text="Yes"
+                            android:textColor="#FFFFFF"
+                            android:textSize="18sp" />
+
+                        <Space
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <Button
+                            android:id="@+id/add_course_shortdesc_no"
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end"
+                            android:backgroundTint="#FFE91E63"
+                            android:text="No"
+                            android:textColor="#FFFFFF"
+                            android:textSize="18sp" />
+
+                        <Space
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                    <View
+                        android:id="@+id/divider3"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="32dp"
+
+                        android:layout_marginRight="32dp"
+
+                        android:background="?android:attr/listDivider"
+                        android:requiresFadingEdge="horizontal" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
