--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,67 +3,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#800080"
+    android:orientation="vertical"
+    android:padding="32dp"
     tools:context=".ParkingAddFragment">
-    <TextView
-        android:id="@+id/title"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:fontFamily="casual"
-        android:lineSpacingExtra="8sp"
-        android:text="UPark"
-        android:textColor="#E8D3A2"
-        android:textSize="36dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:typeface="serif" />
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="32dp">
 
-<!--    <EditText-->
-<!--        android:id="@+id/add_first_name"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:layout_marginBottom="20dp"-->
-<!--        android:background="#FFFFFF"-->
-<!--        android:hint="First Name" />-->
-<!--    <EditText-->
-<!--        android:id="@+id/add_last_name"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="20dp"-->
-<!--        android:background="#FFFFFF"-->
-<!--        android:hint="Last Name" />-->
-<!--    <EditText-->
-<!--        android:id="@+id/add_username"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="20dp"-->
-<!--        android:background="#FFFFFF"-->
-<!--        android:hint="Username" />-->
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:adjustViewBounds="false"
+            android:baselineAlignBottom="false"
+            android:src="@mipmap/u_park_logo" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="casual"
+            android:gravity="center"
+
+            android:text="UPark"
+            android:textColor="#E8D3A2"
+            android:textSize="36dp"
+            android:textStyle="bold"
+            android:typeface="serif" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
     <EditText
         android:id="@+id/add_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="#FFFFFF"
-        android:hint="Email" />
+        android:backgroundTint="#E8D3A2"
+        android:textColor="#E8D3A2"
+        android:hint="@string/enter_your_email_hint"
+        android:inputType="textEmailAddress"
+        android:textColorHint="#E8D3A2"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/add_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:background="#FFFFFF"
-        android:hint="Password"
-        android:inputType="textPassword" />
+        android:textColor="#E8D3A2"
+        android:backgroundTint="#E8D3A2"
+        android:hint="@string/enter_your_password_hint"
+        android:inputType="textPassword"
+        android:textColorHint="#E8D3A2"
+        android:textSize="24sp" />
+
+
     <Button
         android:id="@+id/btn_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:background="#E8D3A2"
+        android:layout_gravity="center"
+        android:layout_weight="0"
+        android:layout_margin="16dp"
+        android:backgroundTint="#E8D3A2"
         android:text="Register" />
 
 </LinearLayout>
