Adds button for lot request
The button returns (ostensibly) your location and says a request was sent tho at this time it was not-- next will try to have the button send an email with lat and long

--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -61,6 +61,14 @@
             android:id="@+id/map_container">
 <!--            <include layout="@layout/fragment_parking_map" />-->
 
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/request_lot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|end"
+                    android:layout_margin="@dimen/fab_margin"
+                    app:srcCompat="@android:drawable/ic_input_add" />
+
 
             <com.google.android.gms.maps.MapView
                 android:layout_width="match_parent"
